Video size fixed for smaller devices, footer alignment changed

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,9 @@ body {
   line-height: .8;
   font-size: 0.8em;
 }
+.panel-footer section{
+  margin-top: 15px;  
+}
 .panel-footer div.row {
   margin-bottom: 35px;
 }
@@ -181,7 +184,7 @@ h3.tutorial-item-title {
 /** END SINGLE CATEGORY PAGE **/
 
 /* Single Video Page */
-#vid{
+.vid{
 width:720px;
 height:480px;
 }
@@ -265,7 +268,7 @@ textarea{
   .tutorial-item-description {
     text-align: center;;
   }
-  #vid{
+  .vid{
     width:100%;
     height:480px;
   }
